--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -89,7 +89,7 @@ button:focus {
   top: 10px;
   left: 30px;
   z-index: 1000;
-  width: 100px;
+  width: 800  px;
   margin: 0;
   font-size: 40px;
 }
@@ -97,9 +97,11 @@ button:focus {
 .header nav {
   /*position: fixed;*/
   float: right;
-  top: 10px;
+  top: 100px;
   left: 210px;
   z-index: 1000;
+  padding: 30px;
+
 
 
 }
@@ -115,12 +117,14 @@ button:focus {
 .header li {
   display: inline-block;
   /*margin: 0 0 0 0 em;*/
-  font-size: 16px;
+  font-size: 18px;
   top: 10px;
   left: 30px;
   z-index: 1000;
   width: 120px;
   vertical-align: 10px;
+  text-align: center;
+
 }
 
 .header .is-active {
@@ -259,20 +263,20 @@ button:focus {
 }
 
 
-@media (max-width: 580px) {
-  .header h1 {
-    top: 15px;
-    left: 15px;
-    width: 120px;
-  }
+/*@media (max-width: 580px) {*/
+  /*.header h1 {*/
+    /*top: 15px;*/
+    /*left: 15px;*/
+    /*width: 120px;*/
+  /*}*/
 
-  .header nav {
-    top: 15px;
-    left: 135px;
-  }
+  /*.header nav {*/
+    /*top: 15px;*/
+    /*left: 135px;*/
+  /*}*/
 
-  .header li {
-    display: block;
-    margin-left: 1em;
-  }
-}
+  /*.header li {*/
+    /*display: block;*/
+    /*margin-left: 1em;*/
+  /*}*/
+/*}*/
