--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -86,12 +86,12 @@ button:focus {
 
 .header h1 {
   position: fixed;
-  top: 10px;
+  top: 25px;
   left: 30px;
   z-index: 1000;
-  width: 800  px;
+  width: 800 px;
   margin: 0;
-  font-size: 40px;
+  font-size: 30px;
 }
 
 .header nav {
@@ -125,6 +125,14 @@ button:focus {
   vertical-align: 10px;
   text-align: center;
 
+}
+
+#sf {
+  display: inline-block;
+  margin: 0;
+  border: 0;
+  float: right;
+  width: 450px;
 }
 
 .header .is-active {
