--- a/docs/css/comment.css
+++ b/docs/css/comment.css
@@ -1,119 +1,123 @@
-$
-dark-grey: #404040
-
-;
-$
-nc-blue: #00BDFC
-
-;
-$
-nc-bl-dark: #0093C4
-
-;
-$
-red: #FC3F00
-
-;
-
-body {
-  font-family: 'PT Sans', sans-serif;
-  padding: 2rem;
+body{ background: #fafafa;}
+.widget-area.blank {
+  background: none repeat scroll 0 0 rgba(0, 0, 0, 0);
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  -ms-box-shadow: none;
+  -o-box-shadow: none;
+  box-shadow: none;
+}
+body .no-padding {
+  padding: 0;
+}
+.widget-area {
+  background-color: #fff;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  -ms-border-radius: 4px;
+  -o-border-radius: 4px;
+  border-radius: 4px;
+  -webkit-box-shadow: 0 0 16px rgba(0, 0, 0, 0.05);
+  -moz-box-shadow: 0 0 16px rgba(0, 0, 0, 0.05);
+  -ms-box-shadow: 0 0 16px rgba(0, 0, 0, 0.05);
+  -o-box-shadow: 0 0 16px rgba(0, 0, 0, 0.05);
+  box-shadow: 0 0 16px rgba(0, 0, 0, 0.05);
+  float: left;
+  margin-top: 30px;
+  padding: 25px 30px;
+  position: relative;
+  width: 100%;
+}
+.status-upload {
+  background: none repeat scroll 0 0 #f5f5f5;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  -ms-border-radius: 4px;
+  -o-border-radius: 4px;
+  border-radius: 4px;
+  float: left;
+  width: 100%;
+}
+.status-upload form {
+  float: left;
+  width: 100%;
+}
+.status-upload form textarea {
+  background: none repeat scroll 0 0 #fff;
+  border: medium none;
+  -webkit-border-radius: 4px 4px 0 0;
+  -moz-border-radius: 4px 4px 0 0;
+  -ms-border-radius: 4px 4px 0 0;
+  -o-border-radius: 4px 4px 0 0;
+  border-radius: 4px 4px 0 0;
+  color: #777777;
+  float: left;
+  font-family: Lato;
+  font-size: 14px;
+  height: 142px;
+  letter-spacing: 0.3px;
+  padding: 20px;
+  width: 100%;
+  resize:vertical;
+  outline:none;
+  border: 1px solid #F2F2F2;
 }
 
-button {
-  border: none;
-  border-radius: 0.25rem;
-  font-size: 0.75rem;
-  font-weight: bold;
-  padding: 0.75em;
-/ / 12 px / 16 px display: inline-block;
-  text-decoration: none;
-
-&
-:hover {
+.status-upload ul {
+  float: left;
+  list-style: none outside none;
+  margin: 0;
+  padding: 0 0 0 15px;
+  width: auto;
+}
+.status-upload ul > li {
+  float: left;
+}
+.status-upload ul > li > a {
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  -ms-border-radius: 4px;
+  -o-border-radius: 4px;
+  border-radius: 4px;
+  color: #777777;
+  float: left;
+  font-size: 14px;
+  height: 30px;
+  line-height: 30px;
+  margin: 10px 0 10px 10px;
+  text-align: center;
+  -webkit-transition: all 0.4s ease 0s;
+  -moz-transition: all 0.4s ease 0s;
+  -ms-transition: all 0.4s ease 0s;
+  -o-transition: all 0.4s ease 0s;
+  transition: all 0.4s ease 0s;
+  width: 30px;
   cursor: pointer;
 }
-
-&
-:focus {
-  text-decoration: none;
-  outline: none;
-}
-
-}
-.comment-box {
-  max-width: 37.5rem;
-  color: #fff;
-  background-color: #909090;
-  border-radius: 0.875rem;
-  padding: 0.2rem 1rem 2rem;
-}
-
-.comment-form {
-  background-color: #fff;
-  border-radius: 0.25rem;
-  margin-bottom: 2rem;
-  padding: 1rem;
-}
-
-.comment-form-fields {
-  margin-bottom: 0.25rem;
-
-input, textarea {
-  border: none;
-  border-bottom: 1px solid $ dark-grey;
-  font-size: 0.85rem;
-  padding: 0.25rem 0;
-  width: 99%;
-
-&
-:focus {
-  border-bottom-color: $ nc-blue;
-  outline: none;
-}
-
-}
-textarea {
-  font-style: italic;
-}
-
-}
-.comment-form-actions {
-
-}
-
-.comment-count {
-  color: $ dark-grey;
-}
-
-#comment-reveal {
-  float: right;
-  background-color: $ nc-blue;
+.status-upload ul > li > a:hover {
+  background: none repeat scroll 0 0 #606060;
   color: #fff;
 }
+/*.status-upload form button {*/
+  /*border: medium none;*/
+  /*-webkit-border-radius: 4px;*/
+  /*-moz-border-radius: 4px;*/
+  /*-ms-border-radius: 4px;*/
+  /*-o-border-radius: 4px;*/
+  /*border-radius: 4px;*/
+  /*color: green;*/
+  /*float: right;*/
+  /*font-family: Lato;*/
+  /*font-size: 14px;*/
+  /*letter-spacing: 0.3px;*/
+  /*margin-right: 9px;*/
+  /*margin-top: 9px;*/
+  /*padding: 6px 15px;*/
+/*}*/
 
-.comment {
-  border-top: 0.125rem solid $ dark-grey;
+.dropdown > a > span.green:before {
+  border-left-color: #2dcb73;
 }
-
-.comment-body {
-  font-style: italic;
-  margin-left: 1rem;
-}
-
-.comment-footer {
-  margin-bottom: 1rem;
-}
-
-.comment-footer-delete {
-  padding: 0.2rem 0;
-  color: $ dark-grey;
-  text-decoration: none;
-
-&
-:hover {
-  color: $ nc-blue;
-  font-weight: bold;
-}
-
+.status-upload form button > i {
+  margin-right: 7px;
 }
